frontend/test/should_pass/assign_transient_object_in_function.gm
transient class Test
{
	i:int;
}
