frontend/test/should_fail/new.gm
class FooBar
{
}

class Barfuss
{
	i:int;
	s:string;
	d:double;
}
